--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -9,25 +9,16 @@
     }
   },
   "profiles": {
-    "http": {
+    "HillarysHairCare":{
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "http://localhost:5000",
+     "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "https": {
-      "commandName": "Project",
-      "dotnetRunMessages": true,
-      "launchBrowser": true,
-      "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7047;http://localhost:5001",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
     },
     "IIS Express": {
       "commandName": "IISExpress",
@@ -38,4 +29,4 @@
       }
     }
   }
-}
+
